PO-2312
pushing changes - updated unit tests and service with changes to alias columns. builds successful